Added new char driver and updated files

--- a/CharDrivers/Makefile
+++ b/CharDrivers/Makefile
@@ -24,8 +24,8 @@ clean:
 
 else
     # called from kernel build system: just declare what our modules are
-    
-	obj-m := charDriver.o device_static.o device_dynamic.o uppercase.o nextchar.o
+    	obj-m := datto_char.o
+	#obj-m := charDriver.o device_static.o device_dynamic.o uppercase.o nextchar.o
 endif
 
 
