In misc-module-Added firmware loader driver file

--- a/misc-modules/Makefile
+++ b/misc-modules/Makefile
@@ -24,7 +24,7 @@ clean:
 
 else
     # called from kernel build system: just declare what our modules are
-    obj-m := helloDriver.o
+    obj-m := fw_loader.o helloDriver.o
 endif
 
 
